--- a/Project Files/Preworker/Preworker/Base.lproj/Main.storyboard
+++ b/Project Files/Preworker/Preworker/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="M1F-27-ikU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="M1F-27-ikU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
         <!--Image Processing-->
@@ -58,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="03V-xQ-JdE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1561" y="521"/>
+            <point key="canvasLocation" x="1664" y="182"/>
         </scene>
         <!--File Downloading View Controller-->
         <scene sceneID="FYc-1C-Sud">
@@ -106,7 +106,48 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Ef-6E-AqT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1561" y="1070"/>
+            <point key="canvasLocation" x="1699" y="948"/>
+        </scene>
+        <!--Timeouts View Controller-->
+        <scene sceneID="Gn5-q1-jdY">
+            <objects>
+                <viewController id="wL5-si-Tu7" customClass="TimeoutsViewController" customModule="Preworker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MRI-PB-Jtp"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gej-rK-l0C"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="go1-eo-HUg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slowly generating the string" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGr-fA-6bI">
+                                <rect key="frame" x="194" y="56" width="213" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Building..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bib-ch-Vcj">
+                                <rect key="frame" x="262" y="290" width="77" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="bib-ch-Vcj" secondAttribute="centerX" id="JKY-YD-x0C"/>
+                            <constraint firstAttribute="centerY" secondItem="bib-ch-Vcj" secondAttribute="centerY" id="T3d-gG-UeZ"/>
+                            <constraint firstAttribute="centerX" secondItem="XGr-fA-6bI" secondAttribute="centerX" id="T4r-lg-kIC"/>
+                            <constraint firstItem="XGr-fA-6bI" firstAttribute="top" secondItem="MRI-PB-Jtp" secondAttribute="bottom" constant="36" id="WVH-uF-sJF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="resultLabel" destination="bib-ch-Vcj" id="FjP-bs-1R1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4jH-l4-Vrb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1719" y="1748"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xrp-ge-WjB">
@@ -171,6 +212,23 @@
                                             <segue destination="yCe-JL-pVM" kind="show" id="nea-WH-lAW"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="Gid-0j-5yt" style="IBUITableViewCellStyleDefault" id="mFh-DU-wtx">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mFh-DU-wtx" id="YBO-06-pZq">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Timeouts" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gid-0j-5yt">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="wL5-si-Tu7" kind="show" id="ORB-t1-Ymo"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -183,7 +241,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WEc-2z-MTJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="875" y="948"/>
+            <point key="canvasLocation" x="943" y="948"/>
         </scene>
     </scenes>
     <resources>
